--- a/css/nation.css
+++ b/css/nation.css
@@ -50,7 +50,7 @@
 .college-list{
 	overflow:hidden;
 	border:1px solid #DCDDDD;
-	margin:0 0 0px 0;
+	margin:0 0 0 0;
 	padding:0;background:url(../images/bgt3.gif) top repeat-x;
 }
 
@@ -87,7 +87,7 @@
 	overflow:hidden;
 	display:block;
 	margin:0 8px;
-	padding:6px 0 6px 0px;
+	padding:6px 0 6px 0;
 	border-bottom:1px dotted #CCC;
 	width: 692px;
 }
@@ -139,7 +139,7 @@
 	overflow: hidden;
 }
 .container315 li{
-	margin:0px;
+	margin:0;
 }
 .collegename{
 	padding:4px;
@@ -158,24 +158,7 @@
 .collegeblog a:hover{ color:#C00; text-decoration:underline}
 .topno{font-size:10px; color:white; padding:0 10px 0 4px; margin:auto 0 ; font-family:Arial}
 .topno10{font-size:10px; color:white; padding:0 10px 0 2px ; margin:auto 0; font-family:Arial}
-.top1-3{
-	padding-left: 0px;
-	padding: 2px ;
-	padding-right: 4px;
-	padding-bottom: 2px;
-	background-image: url(../images/top1-3.gif);
-	background-repeat: no-repeat;
-	background-position: 2px 8px;
-}
-.top4-10{
-	padding-left: 0px;
-	padding-top: 2px;
-	padding-right: 4px;
-	padding-bottom: 2px;
-	background-image: url(../images/top4-10.gif);
-	background-repeat: no-repeat;
-	background-position: 2px 6px;
-}
+
 .top1-3 a{ font-size:12px; color:#F30; text-decoration:none}
 .top1-3 a:hover{ text-decoration:underline}
 .top4-10 a{ font-size:12px; color:#333; text-decoration:none}
