--- a/css/news.css
+++ b/css/news.css
@@ -14,7 +14,7 @@ p{ margin:0; padding:0; font-size:14px; line-height:24px}
 }
 .col-2{
 	margin:0 0 0 0;
-	padding:0px;
+	padding:0;
 	width:345px;
 	float:left;
 	/* [disabled]background-color: #000; */
@@ -166,7 +166,7 @@ p{ margin:0; padding:0; font-size:14px; line-height:24px}
 	overflow: hidden;
 }
 .container280 li{
-	margin:0px;
+	margin:0;
 }s
 .collegename{
 	padding:4px;
@@ -321,32 +321,9 @@ p{ margin:0; padding:0; font-size:14px; line-height:24px}
 	width:346px
 }
 .container345 ul{ margin:5px 0; padding:0; list-style:none outside none}
-.topno{font-size:10px; color:white; padding:3px 10px 0 4px; margin:auto 0 ; font-family:Arial; float:left}
-.topno10{font-size:10px; color:white; padding:3px 10px 0 2px ; margin:auto 0; font-family:Arial; float:left}
-.top1-3{
-	padding-left: 0px;
-	padding-top: 2px ;
-	padding-right: 4px;
-	padding-bottom: 2px;
-	background-image: url(../images/top1-3.gif);
-	background-repeat: no-repeat;
-	background-position: 2px 6px;
-}
-.top4-10{
-	padding-left: 0px;
-	padding-top: 2px;
-	padding-right: 4px;
-	padding-bottom: 2px;
-	background-image: url(../images/top4-10.gif);
-	background-repeat: no-repeat;
-	background-position: 2px 6px;
-}
-.top1-3 a{ font-size:12px; color:#F30; text-decoration:none}
-.top1-3 a:hover{ text-decoration:underline}
-.top4-10 a{ font-size:12px; color:#333; text-decoration:none}
-.top4-10 a:hover{ color:#C00; text-decoration:underline}
+
 .greylist{
-	background:url(../www.img/greydot.gif) center left no-repeat;
+	background:url(../images/greydot.gif) center left no-repeat;
 	padding-left: 8px;
 	padding-top: 4px;
 	padding-right: 4px;
