--- a/css/qa.css
+++ b/css/qa.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
-.recommended—specialist {
+.recommended-specialist {
 	margin:0 0 5px 0;
 	font-size:12px;
 	padding: 0 5px;
@@ -9,8 +9,8 @@
 	display: block;
 	width: 268px;
 }
-.recommended—specialist ul{ list-style:none outside none; padding:0; margin:0}
-.recommended—specialist ul li{
+.recommended-specialist ul{ list-style:none outside none; padding:0; margin:0}
+.recommended-specialist ul li{
 	list-style:none outside none;
 	padding:5px 0 0 0;
 	margin:0;
