--- a/css/title.css
+++ b/css/title.css
@@ -3,10 +3,8 @@
 .pagination{
 	padding:6px 0;
 	clear:both;
-	
 	text-align:right;
-	
-	font-family: Arial;
+
 }
 .body{width:1010px;  overflow:hidden; margin:0 auto; padding:0;font:  Arial, "宋体";}
 .total{text-align:right;font-size:12px; color:#333;}
@@ -39,9 +37,7 @@
 	text-align:center;
 	width:75px;
 	height:24px;
-	background-image: url(../images/search_bg.gif);
-	background-repeat: no-repeat;
-	background-position: left top;
+	background: url(../images/search_bg.gif)  no-repeat left top;
 	text-indent: -9999px;
 
 
@@ -138,7 +134,7 @@
 .t1010-nation ul li a:hover{text-decoration:underline;}
 .college-search-engine{ border:1px solid #DCDDDD; margin:0 0 10px 0; padding:0;}
 
-.title-cse{ background:#efefef; height:20px; padding:6px 0px 0px 0px;}
+.title-cse{ background:#efefef; height:20px; padding:6px 0 0 0;}
 .t1{ font: bold 14px Arial, "宋体"; background:url(../images/bgt1.gif) top repeat-x #FFF; padding:6px 10px; border-right:1px solid #CCC; display:inline}
 .t2{
 	font-size:14px;
